appId: com.timdholmes.GiftIdeas
---
- launchApp:
    clearState: false
- runFlow:
    file: subflows/setup-steps.yaml
- tapOn: "Me"
- assertVisible: "Hi, Me"
- assertVisible: "To invite someone to your ideas, click below."
- assertVisible: "Add"
